--- a/config/database.yml
+++ b/config/database.yml
@@ -23,13 +23,13 @@ default: &default
 
 development:
   <<: *default
-  database: stack_over_runneth_development
+  database: stack_runneth_over_development
 
   # The specified database role being used to connect to postgres.
   # To create additional roles in postgres see `$ createuser --help`.
   # When left blank, postgres will use the default role. This is
   # the same name as the operating system user that initialized the database.
-  #username: stack_over_runneth
+  #username: stack_runneth_over
 
   # The password associated with the postgres role (username).
   #password:
@@ -57,7 +57,7 @@ development:
 # Do not set this db to the same as development or production.
 test:
   <<: *default
-  database: stack_over_runneth_test
+  database: stack_runneth_over_test
 
 # As with config/secrets.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
@@ -80,6 +80,6 @@ test:
 #
 production:
   <<: *default
-  database: stack_over_runneth_production
-  username: stack_over_runneth
-  password: <%= ENV['STACK_OVER_RUNNETH_DATABASE_PASSWORD'] %>
+  database: stack_runneth_over_production
+  username: stack_runneth_over
+  password: <%= ENV['STACK_RUNNETH_OVER_DATABASE_PASSWORD'] %>
